fix(doc): #3398 updated subtitle
Former-commit-id: fd0892c4f5a87a8d8198be0cee2f5cf355d9ff73

--- a/content/blog/vulnserver-lter-seh/index.adoc
+++ b/content/blog/vulnserver-lter-seh/index.adoc
@@ -1,7 +1,7 @@
 :slug: vulnserver-lter-seh/
 :date: 2020-06-23
 :category: attacks
-:subtitle: Exploiting in stages
+:subtitle: Bad chars everywhere
 :tags: osce, vulnserver, training, exploit
 :image: cover.png
 :alt: Photo by Kevin Ku on Unsplash
