--- a/content/pages/rules/source/173/index.adoc
+++ b/content/pages/rules/source/173/index.adoc
@@ -123,7 +123,7 @@ therefore this information must be validated.
 
 * [inner]#link:/web/findings/110/[F110. HTTP request smuggling]#
 
-== Referencias
+== References
 
 . [[r1]] link:https://www.owasp.org/index.php/Top_10_2013-A1-Injection[A1 Injection OWASP - Top 10 2013]
 
@@ -162,72 +162,67 @@ externally-influenced input from an upstream component,
 but it does not neutralize or incorrectly neutralizes special elements that
 could modify the intended SQL command.
 
-. [[r10]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: SQL Injection].
+. [[r10]] link:https://cwe.mitre.org/data/definitions/94.html[CWE-94: Code Injection].
+The software constructs all or part of a code segment using
+externally-influenced input from an upstream component,
+but it does not neutralize or incorrectly neutralizes special elements that
+could modify the syntax or behavior of the intended code segment.
+
+. [[r11]] link:https://cwe.mitre.org/data/definitions/116.html[CWE-116: Improper Encoding or Escaping of Output].
 The software prepares a structured message for communication with another
 component,
 but encoding or escaping of the data is either missing or done incorrectly.
 As a result, the intended structure of the message is not preserved.
 
-. [[r11]] link:https://cwe.mitre.org/data/definitions/602.html[CWE-602: Client-Side Enforcement of Server-Side Security]
+. [[r12]] link:https://cwe.mitre.org/data/definitions/138.html[CWE-138: Improper Neutralization of Special Elements].
+The software receives input from an upstream component,
+but it does not neutralize or incorrectly neutralizes special elements that
+could be interpreted as control elements or syntactic markers when they are
+sent to a downstream component.
+
+. [[r13]] link:https://cwe.mitre.org/data/definitions/147.html[CWE-147: Improper Neutralization of Input Terminators].
+The software receives input from an upstream component,
+but it does not neutralize or incorrectly neutralizes special elements that
+could be interpreted as input terminators when they are sent to a downstream
+component.
+
+. [[r14]] link:https://cwe.mitre.org/data/definitions/159.html[CWE-159: Improper Handling of Invalid Use of Special Elements].
+The product does not properly filter, remove, quote, or otherwise manage the
+invalid use of special elements in user-controlled input,
+which could cause adverse effect on its behavior and integrity.
+
+. [[r15]] link:https://cwe.mitre.org/data/definitions/602.html[CWE-602: Client-Side Enforcement of Server-Side Security].
 The software is composed of a server that relies on the client to implement a
 mechanism that is intended to protect the server.
 
-. [[r12]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.10]
+. [[r16]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.10]
 Verify that all database queries are protected
 by the use of parameterized queries
 or proper *ORM* usage to avoid *SQL* injection.
 
-. [[r13]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.11]
+. [[r17]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.11]
 Verify that the application is not susceptible to *LDAP* Injection,
 or that security controls prevent *LDAP* Injection.
 
-. [[r14]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.12]
+. [[r18]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.12]
 Verify that the application is not susceptible to *OS* Command Injection,
 or that security controls prevent *OS* Command Injection.
 
-. [[r15]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.13]
+. [[r19]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.13]
 Verify that the application is not susceptible
 to Remote File Inclusion (*RFI*) or Local File Inclusion (*LFI*)
 when content is used that is a path to a file.
 
-. [[r16]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.14]
-Verify that the application is not susceptible
-to XPath injection or *XML* injection attacks.
-
-. [[r17]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.15]
-Verify that all string variables placed into *HTML*
-or other web client code are either properly contextually encoded manually,
-or utilize templates that automatically contextually encode
-to ensure the application is not susceptible to reflected,
-stored or *DOM* Cross-Site Scripting (*XSS*) attacks.
-
-. [[r18]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.20]
-Verify that structured data is strongly typed
-and validated against a defined schema including allowed characters,
-length and pattern (e.g. credit card numbers or telephone,
-or validating that two related fields are reasonable,
-such as validating suburbs and zip or post codes match).
-
-. [[r19]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.21]
-Verify that unstructured data is sanitized to enforce generic safety measures
-such as allowed characters and length,
-and characters potentially harmful in given context should be escaped
-(e.g. natural names with Unicode or apostrophes, such as ねこ or O'Hara).
-
-. [[r20]] link:https://www.owasp.org/index.php/ASVS_V5_Input_validation_and_output_encoding[OWASP-ASVS v3.1-5.22]
-Verify that all untrusted *HTML* input from *WYSIWYG* editors or similar
-is properly sanitized with an *HTML* sanitizer library or framework feature.
-
-. [[r21]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r20]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.5 Input and Output Architectural Requirements.(1.5.3)]
 Verify that input validation is enforced on a trusted service layer.
 
-. [[r22]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r21]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.5 Input and Output Architectural Requirements.(1.5.4)]
 Verify that output encoding occurs close to or by the interpreter for which it
 is intended.
 
-. [[r23]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r22]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.1 Input Validation Requirements.(5.1.1)]
 Verify that the application has defenses against HTTP parameter pollution
 attacks,
@@ -235,15 +230,63 @@ particularly if the application framework makes no distinction about the source
 of request parameters (*GET*, *POST*, cookies, headers,
 or environment variables).
 
-. [[r24]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r23]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.1 Input Validation Requirements.(5.1.3)]
 Verify that all input (*HTML* form fields, *REST* requests, *URL* parameters,
 *HTTP* headers, cookies, batch files, *RSS* feeds, etc) is validated using
 positive validation (*whitelisting*).
 
-. [[r25]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r24]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.1 Input Validation Requirements.(5.1.4)]
 Verify that structured data is strongly typed and validated against a defined
 schema including allowed characters, length and pattern
 (e.g. credit card numbers or telephone, or validating that two related fields
 are reasonable, such as checking that suburb and zip/postcode match).
+
+. [[r25]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.2 Sanitization and Sandboxing Requirements.(5.2.1)]
+Verify that all untrusted *HTML* input from *WYSIWYG* editors or similar is
+properly sanitized with an *HTML* sanitizer library or framework feature.
+
+. [[r26]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.2 Sanitization and Sandboxing Requirements.(5.2.2)]
+Verify that unstructured data is sanitized to enforce safety measures such as
+allowed characters and length.
+
+. [[r27]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.2 Sanitization and Sandboxing Requirements.(5.2.3)]
+Verify that the application sanitizes user input before passing to mail systems
+to protect against *SMTP* or *IMAP* injection.
+
+. [[r28]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.2 Sanitization and Sandboxing Requirements.(5.2.4)]
+Verify that the application avoids the use of **eval()** or other dynamic code
+execution features.
+Where there is no alternative,
+any user input being included must be sanitized or sandboxed before being
+executed.
+
+. [[r29]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.2 Sanitization and Sandboxing Requirements.(5.2.5)]
+Verify that the application protects against template injection attacks by
+ensuring that any user input being included is sanitized or sandboxed.
+
+. [[r30]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.2 Sanitization and Sandboxing Requirements.(5.2.6)]
+Verify that the application protects against *SSRF* attacks,
+by validating or sanitizing untrusted data or *HTTP* file metadata,
+such as filenames and URL input fields,
+or using whitelisting of protocols, domains, paths and ports.
+
+. [[r31]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.2 Sanitization and Sandboxing Requirements.(5.2.7)]
+Verify that the application sanitizes, disables, or sandboxes user-supplied
+*SVG* scriptable content,
+especially as they relate to *XSS* resulting from inline scripts, and
+foreignObject.
+
+. [[r32]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.2 Sanitization and Sandboxing Requirements.(5.2.8)]
+Verify that the application sanitizes, disables, or sandboxes user-supplied
+scriptable or expression template language content,
+such as Markdown, *CSS* or *XSL* stylesheets, *BBCode*, or similar.
