--- a/content/blog/vulnserver-gmon/index.adoc
+++ b/content/blog/vulnserver-gmon/index.adoc
@@ -5,7 +5,7 @@
 :tags: osce, vulnserver, training, exploit
 :image: cover.png
 :alt: Photo by Roberto Gomez Angel on Unsplash
-:description: In previous posts, we have seen different techniques to exploit Vulnserver commands. All of them have something in common: direct EIP overwrite. In this post, we will explore Structured Exception Handling (SEH) overwritting for taking control of the flow of our victim application.
+:description: In previous posts, we have seen different techniques to exploit Vulnserver commands. All of them have something in common: direct EIP overwrite. In this post, we will explore Structured Exception Handling (SEH) overwriting for taking control of the flow of our victim application.
 :keywords: Bussiness, Information, Security, Protection, Hacking, Exploit, OSCE
 :author: Andres Roldan
 :writer: aroldan
@@ -14,28 +14,28 @@
 :about2: "We don't need the key, we'll break in" RATM
 :source: https://unsplash.com/photos/KmKZV8pso-s
 
-= GMON exploiting: Harnessing SEH
+= GMON Exploiting: Harnessing SEH
 
 This is the fourth article on the series of exploiting `Vulnserver`,
-a VbD (Vulnerable-by-Design) application in which you can practice Windows
-exploit development.
+a `VbD` (Vulnerable-by-Design) application
+in which you can practice Windows exploit development.
 
-In our previous posts, we have successfully exploited link:../vulnserver-trun/[TRUN]
+In our previous posts, we have successfully exploited link:../vulnserver-trun/[TRUN],
 and link:../vulnserver-gter-no-egghunter/[GTER] commands.
-Both of them had something in common: direct EIP overwrite, in which
+Both of them had something in common: direct `EIP` overwrite, in which
 our buffer directly overwrote the `return address` on the stack frame
-of the affected function with a `JMP` instruction to execute the code on
-our controlled buffer.
+of the affected function with a `JMP` instruction to execute the code
+on our controlled buffer.
 
 In this post, we will exploit the `GMON` command using a Structured
-Exception Handling (SEH) overwrite to take control of the flow of Vulnserver.
+Exception Handling (`SEH`) overwrite to take control of the flow of Vulnserver.
 
 == Structured Exception Handling
 
-SEH is a non-standard mechanism created by Microsoft to handle exceptions
-of applications using an uniform structure. It allows C/C++ programs using
-the well known exception handling syntax (`try-except-finally`) used by other
-high-level imperative languages. This is an example:
+`SEH` is a non-standard mechanism created by Microsoft to handle exceptions
+of applications using a uniform structure. It allows `C/C++` programs using
+the well-known exception handling syntax (`try-except-finally`) used by other
+high-level imperative languages. Here's an example:
 
 [source,c]
 ----
@@ -48,17 +48,19 @@ __except (INSUFFICIENT_MEMORY) {
 }
 ----
 
-As you may imply, this code will try to execute `strcpy()` and if it fails
+As you may imply, this code will try to execute `strcpy()`, and if it fails
 because `INSUFFICIENT_MEMORY`, it will execute `my_exception_handler()`.
 
-As there may be many exceptions, some expliticy declared by the
-application and other by the OS, the handlers are tied together by a chain
+As there may be many exceptions, some explicitly declared by the
+application and other by the `OS`, the handlers are tied together by a chain
 of `_EXCEPTION_REGISTRATION_RECORD` structures, the last one (identified by
 `FFFFFFFF`) being the default handler.
 
-When an exception ocurs, the OS will walk the SEH chain finding which of them
-can handle that exception. If none of the handlers have that exception
-registered, the default handler (`FFFFFFFF`) will be triggered.
+When an exception occurs,
+the `OS` will walk the `SEH` chain,
+finding which of them can handle that exception.
+If none of the handlers have that exception registered,
+the default handler (`FFFFFFFF`) will be triggered.
 
 The structure of `_EXCEPTION_REGISTRATION_RECORD` is:
 
@@ -71,7 +73,7 @@ typedef struct _EXCEPTION_REGISTRATION_RECORD
 } EXCEPTION_REGISTRATION_RECORD, *PEXCEPTION_REGISTRATION_RECORD;
 ----
 
-Where the `Next` parameter is a pointer to the next exception handler, also
+Here the `Next` parameter is a pointer to the next exception handler, also
 called `nSEH` and the `Handler` parameter is a pointer to the handler itself.
 We can see the exception handler's chain on a debugger:
 
@@ -81,34 +83,34 @@ And on the stack, it is shown as:
 
 image::seh2.png[SEH chain]
 
-More information of SEH can be found on
-link:https://docs.microsoft.com/en-us/cpp/cpp/structured-exception-handling-c-cpp?view=vs-2019[Microsoft's site]
+More information on `SEH` can be found on
+link:https://docs.microsoft.com/en-us/cpp/cpp/structured-exception-handling-c-cpp?view=vs-2019[Microsoft's site].
 
 == SEH exploiting
 
-To oversimplify, the main goal to exploit a program using SEH is to have the
-ability to overwrite the exception handler pointer
-(`my_exception_handler()` in our example) of the vulnerable function  with
- a pointer to our own controlled code.
+To oversimplify, the main goal of exploiting a program using `SEH` is to have
+the ability to overwrite the exception handler pointer
+(`my_exception_handler()` in our example) of the vulnerable function
+with a pointer to our controlled code.
 
-Some things must be in place in order for us to successfully exploit an
-application using SEH:
+Some things must be in place for us
+to successfully exploit an application using `SEH`:
 
-. The application must have SEH built in. This is a compile-time option.
-. Our buffer will be allowed to past far enough in the stack frame to reach
-the SEH handler of the function.
-. The application must be compiled with `SafeSEH=Off`
+. The application must have `SEH` built-in. This is a compile-time option.
+. Our buffer will be allowed to pass far enough in the stack frame
+to reach the function's `SEH` handler.
+. The application must be compiled with `SafeSEH=Off`.
 
 `SafeSEH` is a mechanism created since Windows XP that statically defines
 the list of the allowed exception handlers, and if the application tries to
 call something different, a crash will happen.
 
-Ok, now with that brief summary of SEH, let's get our hands dirty.
+Ok, now with that summary of `SEH`, let's get our hands dirty.
 
 == Fuzzing GMON
 
 As with the other Vulnserver commands, the `GMON` command takes a single
-parameter, so we can reuse our Spike fuzz template:
+parameter, so, we can reuse our Spike fuzz template:
 
 [source,c]
 ----
@@ -117,7 +119,7 @@ s_string_variable("*");
 ----
 
 Remember that the `s_string` command will send an immutable string to
-the fuzzed protocol and `s_string_variable` tells `Spike` to use
+the fuzzed protocol, and `s_string_variable` tells `Spike` to use
 that string as a fuzz point.
 
 And run it:
@@ -154,26 +156,27 @@ Now run our exploit with `vulnserver.exe` attached to a debugger:
 
 image::crash1.gif[PoC]
 
-As you can see, we effectively crashed `vulnserver.exe` but EIP does not
-seem to be mangled by our buffer.
+As you can see, we effectively crashed `vulnserver.exe`,
+but `EIP` does not seem to be mangled by our buffer.
 
-However, if we look at the SEH chain table, we will see this:
+However, if we look at the `SEH` chain table, we will see this:
 
 image::seh3.png[Corrupted SEH]
 
 That means that we effectively triggered an exception and overwrote the
 exception handler with our buffer. If we trigger the exception handler (in
-Immunity Debugger, it's done with `Shift+F9`), this will happen:
+Immunity Debugger, it's done with `Shift+F9`) this will happen:
 
 image::eip1.gif[EIP control]
 
-We control EIP! That means that we have control over the execution flow again.
+We control `EIP!` That means that
+we have control over the execution flow again.
 
 We can now exploit this.
 
 == Exploiting
 
-We first need to find the exact offset on where the SEH handler gets
+We first need to find the exact offset on where the `SEH` handler gets
 overwritten. We can do that by creating a cyclic pattern
 using `pattern_create.rb` from Metasploit:
 
@@ -205,9 +208,9 @@ And run it:
 
 image::pattern1.gif[Pattern offset]
 
-As you can see, the handler was overwritten with `346F4533`. To find
-the offset in which the SEH handler get overwritten, we can
-use `pattern_offset.rb`:
+As you can see, the handler was overwritten with `346F4533`.
+To find the offset in which the `SEH` handler gets overwritten,
+we can use `pattern_offset.rb`:
 
 [source,bash]
 ----
@@ -215,7 +218,8 @@ $ msf-pattern_offset -q 346F4533
 [*] Exact match at offset 3551
 ----
 
-Great, the offset on which the SEH handler starts to be overwritten is `3551`.
+Great, the offset on which
+the `SEH` handler starts to be overwritten is `3551`.
 
 To check that offset, we can inject:
 
@@ -223,8 +227,8 @@ To check that offset, we can inject:
 . 4 `B` characters
 . 5000 - 3551 - 4 = 1445 `C` characters
 
-If the SEH handler gets overwritten with our `B` buffer, we got it right. This
-is our updated exploit:
+If the `SEH` handler gets overwritten with our `B` buffer, we got it right.
+This is our updated exploit:
 
 [source,python]
 ----
@@ -252,30 +256,30 @@ Awesome!
 
 Now, what would normally happen is to find a `JMP ESP` instruction.
 
-However, let's look the state of the stack after triggering the exception
-handler:
+However, let's look at the state of the stack
+after triggering the exception handler:
 
 image::aftercrash1.png[Stack]
 
 We can see several things here:
 
-. `EIP` is `42424242`
+. `EIP` is `42424242`.
 . There are 8 bytes between the `ESP` at `0104EBA0` and our buffer at
-`0104EBA8`
-. So, if we'd run a `JMP ESP`, we'd land at a pointer which we don't control
-and exploitation will fail.
+`0104EBA8`.
+. So, if we'd run a `JMP ESP`, we'd land at a pointer which we don't control,
+and exploitation would fail.
 
 So we need to find a way of removing those 8 bytes off of the stack in order
 to redirect the execution flow to our buffer.
 
 == POP/POP/RET
 
-The x86 stack is a LIFO (Last In First Out) structure on where the last item
-pushed on the stack is the first to be poped back. Each `PUSH`
-instruction will exactly push 4 bytes to the stack and every `POP`
-instruction will pop exactly 4 bytes off of the stack.
+The x86 stack is a `LIFO` (Last In First Out) structure
+where the last item pushed into the stack is the first to be popped back.
+Each `PUSH` instruction will push exactly 4 bytes into the stack,
+and every `POP` instruction will pop exactly 4 bytes off of the stack.
 
-With that in mind, and knowning that we need to remove 8 bytes off of the
+With that in mind, and knowing that we need to remove 8 bytes of the
 stack to then return to our controlled buffer, we need to find an
 address that contains a sequence of these instructions:
 
@@ -297,9 +301,9 @@ We can find those 3 instructions using many ways. I will use `mona.py`:
 ----
 
 This will tell `mona.py` to find `POP/POP/RET` instruction sequences and
-omit addresses with null caracters (`-cp nonull`), omit addresses on
-modules compiled with `SafeSEH` (`-cm safeseh=off`) and omit addresses
-on modules of the OS (`-o`).
+omit addresses with null characters (`-cp nonull`), omit addresses on
+modules compiled with `SafeSEH` (`-cm safeseh=off`), and omit addresses
+on modules of the `OS` (`-o`).
 
 image::mona1.png[POP POP RET]
 
@@ -334,29 +338,31 @@ And run it:
 
 image::popret1.gif[POP POP RET]
 
-Weeeeeeeh! We overwrote the SEH handler, triggered the exception and
+Weeeeeeeh! We overwrote the `SEH` handler, triggered the exception, and
 redirected to a `POP/POP/RET` sequence that returned to our controlled buffer!
 
 However...!
 
-We landed only 4 bytes before our injected `POP/POP/RET` address. Remember the
-`_EXCEPTION_REGISTRATION_RECORD` structure? It has 2 members, the SEH handler
-which we are overwritting with the `POP/POP/RET` address and the pointer to
-the next exception handler, also called `nSEH`. So, we landed at `nSEH`.
+We landed only 4 bytes before our injected `POP/POP/RET` address.
+Remember the `_EXCEPTION_REGISTRATION_RECORD` structure?
+It has 2 members: the `SEH` handler,
+which we are overwriting with the `POP/POP/RET` address,
+and the pointer to the next exception handler, also called `nSEH`.
+So, we landed at `nSEH`.
 
-However, just after the injected address there's a good 43 bytes buffer and
-before `nSEH` we had our 3500+ bytes buffer of `A`.
+However, just after the injected address there's a good 43 bytes buffer,
+and before `nSEH` we had our 3500+ bytes buffer of `A`.
 
 So, what's next? That's right! We must jump around again!
 
 == Jump around
 
 We only have 4 bytes to perform our first jump. Fortunately for us, short
-jumps are only link:https://thestarman.pcministry.com/asm/2bytejumps.htm[2 bytes long]
+jumps are only link:https://thestarman.pcministry.com/asm/2bytejumps.htm[2 bytes long].
 
-So, we must perform a short jump of at least 8 bytes to get past *over* our
-injected address and land on our `C` buffer. We can get the needed opcodes
-using `nasm_shell.rb`:
+So, we must perform a short jump of at least 8 bytes to pass *over* our
+injected address and land on our `C` buffer.
+We can get the needed opcodes using `nasm_shell.rb`:
 
 [source,bash]
 ----
@@ -365,11 +371,11 @@ nasm > jmp short +0xa
 00000000  EB08              jmp short 0xa
 ----
 
-*Fun fact:* Note that we told to perform a 10 byte (`0xa`) jump and the
+*Fun fact:* Note that we told to perform a 10 byte (`0xa`) jump, and the
 returned opcode was `EB08`. It's because the `JMP` will calculate the offset
-including the length of the `JMP` instruction alone which is 2 bytes.
+including the length of the `JMP` instruction alone, which is 2 bytes.
 
-Ok, with our short jump opcode, with can update our exploit:
+Ok, with our short jump opcode we can update our exploit:
 
 [source,python]
 ----
@@ -397,14 +403,14 @@ with socket.create_connection((HOST, PORT)) as fd:
     fd.sendall(PAYLOAD)
 ----
 
-And see if we could effectively jump over the SEH handler:
+And see if we could effectively jump over the `SEH` handler:
 
 image::jmp1.gif[Short jump]
 
-Yes! We are past our SEH handler. Now we have enough room of bytes to perform
-a long jump backwards to the start of our `A` buffer. With the help of the
-debugger, we get the needed offset simply by telling it to jump to the
-start of our `A` buffer and letting it calculate the offset.
+Yes! We are past our `SEH` handler. Now we have enough room of bytes to perform
+a long jump back to the start of our `A` buffer.
+With the debugger's help, we get the needed offset by simply telling it to jump
+to the start of our `A` buffer and letting it calculate the offset.
 
 image::jmp2.gif[Long jump]
 
@@ -449,7 +455,7 @@ Great! All that's left is to insert a shellcode. Let's do that.
 
 == Getting shell
 
-We cat create a reverse shellcode using `msfvenom` from Metasploit, using:
+We can create a reverse shellcode using `msfvenom` from Metasploit:
 
 [source,bash]
 ----
@@ -568,6 +574,6 @@ Our shell! We are getting good at it, aren't we?
 
 == Conclusion
 
-Exploiting applications using SEH overwriting is just a little different
-than the simple EIP overwrite. However, you must take care of the little
+Exploiting applications using `SEH` overwriting is just a little different
+than the simple `EIP` overwrite. However, you must take care of the little
 details all the way down to get a successful exploitation.
