refac(front): #3411.1 training to challenges
- Rename training references to challenges
- Replace writeups link with statistics site


Former-commit-id: c8aa2d5d087182932ce53fb7553c1def136d24b5

--- a/content/blog/big-code/index.adoc
+++ b/content/blog/big-code/index.adoc
@@ -134,8 +134,8 @@ lines of code?
 
 Let us take one of the many
 Vulnerable by Design (`VbD`) applications
-we use for training purposes in
-link:https://gitlab.com/fluidattacks/writeups[Writeups],
+we use for training purposes in our
+link:https://autonomicmind.com/challenges/sites-ranking-vbd/[challenges site],
 and see how many vulnerabilities come up
 by running `DeepCode` on them.
 By the way, they currently support
