feat(doc): #2994.179 create rule 343
- Created R343 for the Do Not Track header
- Added a Description
- Added ePrivacy Directive and GDPR references
- Added a rule reference to the corresponding finding


Former-commit-id: 7ac860db047d7e8404811cfa2902c6c9764863fe

--- a/content/pages/findings/hygiene/088/index.adoc
+++ b/content/pages/findings/hygiene/088/index.adoc
@@ -31,3 +31,5 @@ The system violates one or more privacy requirements.
 . [[r9]] [inner]#link:/web/rules/317/[R317. Allow erasure requests]#
 
 . [[r10]] [inner]#link:/web/rules/318/[R318. Notify third parties of changes]#
+
+. [[r11]] [inner]#link:/web/rules/343/[R343. Respect the Do Not Track header]#
