--- a/content/pages/rules/source/164/index.adoc
+++ b/content/pages/rules/source/164/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/164/
 :category: source
 :description: This document details the security guidelines and requirements related to the source code that composes the applications of the company or the organization. This requirement establishes the importance of using optimized data containers or structures.
-:keywords: Requirement, Security, Source Code, Structures, Containers, Optimization
+:keywords: Source Code, Structures, Containers, Optimization, ASVS, CWE
 :rules: yes
 
 = R164. Use optimized structures
@@ -15,3 +15,16 @@ The code must use optimized data containers or structures.
 * [inner]#link:/web/findings/067/[F067. Improper resource allocation]#
 
 * [inner]#link:/web/findings/113/[F113. Improper type assignation]#
+
+== References
+
+. [[r1]] link:https://cwe.mitre.org/data/definitions/20.html[CWE-20: Improper Input Validation].
+The product does not validate or incorrectly validates input that can affect
+the control flow or data flow of a program.
+
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V5.1 Input Validation Requirements.(5.1.4)]
+Verify that structured data is strongly typed and validated against a defined
+schema including allowed characters, length and pattern
+(e.g. credit card numbers or telephone, or validating that two related fields
+are reasonable, such as checking that suburb and zip/postcode match).
