--- a/content/pages/topics/index.adoc
+++ b/content/pages/topics/index.adoc
@@ -137,7 +137,7 @@ Among the topics of interest are:
 * Why `CI` security tools don't break builds?
 * Why automated tools have higher escapes rate?
 * Refactoring `JS` with linting.
-* Why link:../products/asserts/[Asserts] don't use `OpenSSL`?
+* Why link:../asserts/[Asserts] don't use `OpenSSL`?
 * Who must detect changes in an `API`: provider or consumer?
 * Should ethical hacking include vulnerabilities analysis?
 
