--- a/content/blog/parse-conquer/index.adoc
+++ b/content/blog/parse-conquer/index.adoc
@@ -27,7 +27,7 @@ we also showed how to leverage its power
 to find `SQL` injections in a `PHP` application.
 Here we will extend those essentials to show you
 how we use parser combinators in
-[inner]#link:../../products/asserts/[Asserts]#,
+[inner]#link:../../asserts/[Asserts]#,
 our vulnerability closure checker engine.
 Feel free to refer to that article
 for more details on how `Pyparsing` works,
