--- a/content/blog/security-trends/index.adoc
+++ b/content/blog/security-trends/index.adoc
@@ -96,7 +96,7 @@ A lack of knowledge
 or negligence regarding infrastructure settings
 can directly impact your company.
 A weak `AWS` configuration can be detected using automated tools.
-[inner]#link:../../products/asserts/[Asserts]#, one of our products,
+[inner]#link:../../asserts/[Asserts]#, one of our products,
 can detect these flaws, using the link:https://fluidattacks.com/asserts/fluidasserts.cloud.aws.cloudtrail/[`AWS Cloudtrail module`].
 However, some of the cloud leakages
 were also caused by hardware vulnerabilities <<r3, ^[3]^>>,
@@ -132,8 +132,6 @@ about the prospects for Machine Learning in the cybersecurity field
 
 At `Fluid Attacks`, we do not discourage
 the use of automated tools in security tests;
-we even have our own [inner]#link:../../products/commands/[custom cyberweapon]#
-that we sometimes use in our own tests.
 However, a real security issue comes up
 when only automated tools are used,
 since these tools can report false positives.
